--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "J3DUltra"]
 	path = J3DUltra
-	url = https://github.com/Sage-of-Mirrors/J3DUltra.git
+	url = https://github.com/LagoLunatic/J3DUltra.git
+	branch = gcft
 [submodule "pybind11"]
 	path = pybind11
 	url = https://github.com/pybind/pybind11.git
